--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,115 @@
-body {
+* {
+  box-sizing: border-box;
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  border-color: #d2dbdd;
+  text-align: center;
+  font-family: 'Josefin Sans', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  background-image: url(https://images.unsplash.com/photo-1574375927938-d5a98e8ffe85?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NXx8bmV0ZmxpeHxlbnwwfHwwfHw%3D&w=1000&q=80);
 }
+
+.heading_style {
+  padding: 30px 0px;
+  text-align: center;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-weight: 500;
+  color: red;
+  font-size: 3.5rem;
+  font-weight: bolder;
+  margin-bottom: 30px;
+  background-color: black;
+  width: 100%;
+  position: fixed;
+}
+
+.cards {
+  width: 100%;
+  height: 100%;
+}
+
+.card {
+  margin: 6%;
+  transition: all 0.4s cubic-bezier(0.175,0.885,0,1);
+  background-color: whitesmoke;
+  width: 21.25%;
+  padding-bottom: 10px;
+  border-radius: 15px;
+  box-shadow: 0px 13px 10px -7px black;
+  float: left;
+}
+
+.card:hover {
+  box-shadow: 0px 25px 18px -8px black;
+  transform: scale(1.05,1.05);
+}
+
+.card_img {
+  width: 100%;
+  height: 400px;
+  box-shadow: 0 5px 10px 3px black;
+  margin-bottom: 15px;
+}
+
+.card_title {
+  margin: 10px 0px 15px 0px;
+  text-transform: uppercase;
+  font-size: 1.75rem;
+}
+
+button {
+  background: #FF4742;
+  border: 1px solid #FF4742;
+  border-radius: 6px;
+  box-shadow: rgba(0, 0, 0, 0.1) 1px 2px 4px;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  cursor: pointer;
+  display: inline-block;
+  font-family: nunito,roboto,proxima-nova,"proxima nova",sans-serif;
+  font-size: 16px;
+  font-weight: 800;
+  line-height: 16px;
+  min-height: 40px;
+  outline: 0;
+  padding: 12px 14px;
+  text-align: center;
+  text-rendering: geometricprecision;
+  text-transform: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: middle;
+}
+
+button:hover,
+button:active {
+background-color: initial;
+background-position: 0 0;
+color: #FF4742;
+}
+
+button:active {
+opacity: .5;
+}
+
+.card_category {
+  color: #575757;
+  font-size: 1.5rem;
+  text-transform: uppercase;
+}
+
+@media (max-width: 768px) {
+  .card {
+      float: none;
+      margin: 5%;
+      width: 90%;
+  }
+  .heading_style {
+      position: static;
+  }
+}
+
